[gd_scene load_steps=3 format=3 uid="uid://yxjc0jme7xhg"]

[ext_resource type="Script" uid="uid://co4j1jg2tf2p4" path="res://scenes/ui/pause_screen/game/game_container.gd" id="1_ef7w6"]
[ext_resource type="PackedScene" uid="uid://6fbuh03eitpr" path="res://scenes/ui/sound_button/sound_button.tscn" id="2_05xsp"]

[node name="GameContainer" type="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
offset_left = 166.0
offset_top = 71.0
offset_right = 266.0
offset_bottom = 199.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ef7w6")
main_menu_path = "res://scenes/ui/main_menu/main_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SaveButton" parent="VBoxContainer" instance=ExtResource("2_05xsp")]
unique_name_in_owner = true
layout_mode = 2
text = "Save game"

[node name="SettingsButton" parent="VBoxContainer" instance=ExtResource("2_05xsp")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource("2_05xsp")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to menu"
